[project]
name = "audio-rag"
version = "0.1.0"
description = "Simple Audio RAG for beginners"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "chromadb>=1.3.5",
    "mistralai>=1.9.11",
    "openai-whisper",
    "python-dotenv>=1.0.0",
    "torch>=2.0.0",
    "torchaudio>=2.0.0",
    "transformers>=4.30.0",
]

[tool.uv.sources]
openai-whisper = { git = "https://github.com/openai/whisper.git" }
